# Inventory-system

backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs  routes.rs
frontend/templates/: index.html
