# backend/Cargo.toml V 1.2
[package]
name = "inventory_backend"
version = "0.1.0" # 或者您之前設定的版本
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-files = "0.6"
tera = "1"
once_cell = "1.19" # V 1.2: 新增 once_cell 依賴 (請使用最新的相容版本)